fix max width on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -170,7 +170,7 @@ footer {
 
   main {
     margin-left: 10px;
-    width: 90%;
+    max-width: 90%;
     margin-right: 0px;
   }
 }
